--- a/Math123/intro_probability.html
+++ b/Math123/intro_probability.html
@@ -253,7 +253,7 @@ $(function () {
 <h2>Example - Quality Control </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example </button>
   <div id="ex8" class="collapse">
-    <P>A facotry makes batches of 45 precision parts. Quality Control randomly selects 10 for testing and rejects the whole batch if 1 or more are found to be defective.
+    <P>A factory makes batches of 45 precision parts. Quality Control randomly selects 10 for testing and rejects the whole batch if 1 or more are found to be defective.
       A certain batch has 9 defective parts. What is the probability this batch is rejected?
 </div>
 
@@ -263,110 +263,83 @@ $(function () {
   <P> What is the probability that two people in this room have the same birthday (excluding Feb 29)?
   </div>
 
-<!--
-<h2>Example - Coffee Survey </h2>
+
+<h2>Example - Blackjack </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example </button>
   <div id="ex10" class="collapse">
-  <P> A recent survey of 100 coffee drinker showed 70 take sugar, 60 take cream, and 50 take both.
-    <ol>
-      <li>How many take sugar or cream?
-      <li>Sketch a Venn Diagram of the situation.
-      </ol>
+  <P> In the card game blackjack, blackjack is an Ace and facecard or 10. (A+10=21)<br>
+  <P> What is the probabilty of being dealt blackjack in a well shuffled standard deck?<br>
+  <P> What if a casino is using 6 decks?
   </div>
 
-<h2>Example -  </h2>
+<h2>Example - dice (again)  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example </button>
   <div id="ex11" class="collapse">
-  <P> Let n(U)=250, n(A)=85, n(B) = 130, and n(A\(\cap\)B)=35. Find n(A\(\cup\)B)\(^c\). Draw a Venn Diagram of the situation.
+  <P> A single six-sided die is rolled 6 times.
+    <ol>
+      <li>What is the probabilty at least one 6 appears?<br>
+      <li>How many rolls are needed to have better than a 50% change of at least one 6?<br>
+      <li>better than a 99% chance?
   </div>
 <br>
 
-<h2>Example -  </h2>
+<h2>Example - mutually exclusive events </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex12">Example </button>
   <div id="ex12" class="collapse">
-  <img src="./Venn3_1.png" width=350><br>
-  <P>Consider the Venn diagram above and find the quanities below:<br>
+  <P>Let \(E\) and \(F\) be mutually exclusive events. Suppose that \(P(E)=0.1\) and \(P(F)=0.6\). Find the quantities below.<br>
     <ol>
-      <li>n(A\(^c\))
-      <li>n(B\(^c\))
-      <li>n(A\(^c\cap\)B\(^c\))
-      <li>n(A\(\cup\)B)
-      <li>n(A\(\cup\)B)\(^c\)
-      <li>n(A\(\cap\)B)
-      <li>n(A\(\cap\)B)\(^c\)
-      <li>n(A\(^c\cup\)B\(^c\))
-      <li>n(B\(\cap\)C\(^c\) )
+      <li>\(P(E\cap F) \) <br>
+      <li>\(P(E\cup F) \) <br>
+      <li>\(P(E^c) \) <br>
+      <li>\(P(E^c\cap F^c) \) <br>
+      <li>\(P(E^c\cup F^c) \) <br>
     </ol>
   </div>
 
-<h2>Example - Magazine advertising </h2>
+<h2>Example - Venn diagram and probability </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example </button>
   <div id="ex13" class="collapse">
 
-  <P>A company advertises a product in 3 magazines: Sports Illustrated, People, and Time.
-    A Survery of 500 people who bought the product reveals the information below.<br>
+  <P>Let \(A\) and \(B\) be events on sample space \(S\) such that \(P(A)=0.2, P(B)=0.1\), and \(P(A\cap B) = 0.05\).<br>
     <ul>
-      <li>180 saw ads in SI
-      <li>200 saw ads in People
-      <li>192 saw ads in Time
-      <li>84 saw ads in both SI and People
-      <li>52 saw ads in both SI and Time
-      <li>64 saw ads in both People and Time
-      <li>38 saw ads in all three
+      <li>Draw a Venn Diagram labled with probabilties.<br>
+      <li>Find \(P(A \cup B) \).<br>
+      <li>Find \(P(A^c \cap B^c) \).<br>
+      <li>Find \(P(A^c \cap B) \).<br>
     </ul>
-
-    <ol type='1'>
-      <li>Draw a Venn Diagram of the situation.
-      <li>How many learned of the product from at least one magazine?
-      <li>How many learned of the product from exactly one magazine?
-      </ol>
 
   </div>
 
-<h2>Example - Health Class </h2>
+
+<h2>Example - random number </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex14">Example </button>
   <div id="ex14" class="collapse">
 
-  <P>A health class surveyed 1100 students from freshman dorms about eating habits in the cafeteria.<br>
-    <ul>
-      <li>425 ate breakfast
-      <li>680 ate lunch
-      <li>855 ate dinner
-      <li>275 ate breakfast and lunch
-      <li>505 ate lunch and dinner
-      <li>375 ate breakfast and dinner
-      <li>240 ate all three
-    </ul>
+  <P> Three numbers are drawn from {1, 2, 3, 4, 5, 6, 7} and placed in a row in the order drawn to form a three-digit number.
+    What is the probability that <br>
+    <ol type='a'>
+      <li>the number is 456?
+      <li>the first digit is 2, 4, or 6?
+      <li>it is larger than 600?
+      <li>it is less than 326?
+    </ol>
+  </div>
 
-    <ol type='1'>
-      <li>Draw a Venn Diagram of the situation.
-      <li>How many ate only breakfast?
-      <li>How many ate at least 2 meals in the cafeteria?
-      <li>How many ate only 1 meal?
-      <li>How many didn't eat in the cafeteria?
+<h2>Example - HS reunion </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex15">Example </button>
+  <div id="ex15" class="collapse">
+
+  <P>Lauren attended her 10th high school reunion.
+    Of the 65 people present, she observed that 31 were married and in their first marriage,
+    22 were married and in their second marriage, and 12 were currently single. (a)  (b)  (c)
+    <ol>
+      <li>If one person is selected at random from the group, find the probability that it is a single person.
+      <li>If two people are selected at random, find the probability that both are in their second marriage.
+      <li>If three people are selected at random, find the probability that two are in their first marriage and one is single.
       </ol>
 
   </div>
 
-<h2>Example - Sociology project </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex15">Example </button>
-  <div id="ex15" class="collapse">
-
-  <P>Charles Tally gave the following summary of his interviews with 135 students for a sociology project:
-    <ul>
-      <li>65 said they like to go to movies.
-      <li>77 said they like to go to football games.
-      <li>61 said they like to go to the theater.
-      <li>28 said they like to attend movies and football games.
-      <li>25 said they like to attend movies and the theater.
-      <li>29 said they like to attend football games and the theater.
-      <li>8 said they like to attend all three.
-      <li>4 said they do not like to attend any of these.
-      </ul>
-  <P>The professor refused to accept Charles’s paper because the information was inconsistent.
-    Was the professor justified in claiming that the information was inconsistent?
-  </div>
--->
 <br>
 
 
