--- a/math154/div_curl.html
+++ b/math154/div_curl.html
@@ -186,6 +186,13 @@ is not defined?<br>
 
 </div>
 
+<h2>Example - Solenoidal Field </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example3">Example</button>
+  <div id="example3" class="collapse">
+    <P> Let \(\vec{r} = x\hat{x} + y \hat{y} + z\hat{z}\). For what values of \(p\), if any, is \(\displaystyle \vec{F} = \frac{\vec{r}}{||\vec{r}||^p} \) solenoidal?
+
+</div>
+
 
 <br>
 
