--- a/Math123/conditional_probability.html
+++ b/Math123/conditional_probability.html
@@ -121,7 +121,7 @@ $(function () {
 <h2>Example - Three event result </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4b">Example </button>
   <div id="ex4b" class="collapse">
-  <P>Explain the formula \(\displaystyle P( A \cap B \cap C) = P(A) P(|A) P(C| A \cap B)\).
+  <P>Explain the formula \(\displaystyle P( A \cap B \cap C) = P(A) P(B|A) P(C| A \cap B)\).
     </div>
 
 
