--- a/Math123/conditional_probability.html
+++ b/Math123/conditional_probability.html
@@ -112,8 +112,8 @@ $(function () {
     <P> 60% of a store's customers are female and 75% of female customers have a charge account.
 
       <ul>
-        <li> What is the probabilty that a random customer is a female with a charge account?<br>
-        <li> If 80% of males have a charge account, what is the probabilty that a random customer has a charge account?<br>
+        <li> What is the probability that a random customer is a female with a charge account?<br>
+        <li> If 80% of males have a charge account, what is the probability that a random customer has a charge account?<br>
         </ul>
 </div>
 
@@ -130,8 +130,8 @@ $(function () {
   <div id="ex4c" class="collapse">
   <P>Consider playing blackack with a single 52 card deck. Blackjack is an ace and a card worth 10 (10,J,Q,K).
     <ul>
-      <li>What is the probabilty of blackjack if the first card dealt is an ace?<br>
-      <li>What is the probabilty of blackjack if the first card dealt is a card worth 10?<br>
+      <li>What is the probability of blackjack if the first card dealt is an ace?<br>
+      <li>What is the probability of blackjack if the first card dealt is a card worth 10?<br>
       <li>How is this related to the previous unordered approach we looked at?
     </ul>
 
@@ -146,7 +146,7 @@ $(function () {
 
 
       <ul>
-        <li>What is the probabilty that a random computer sold by A is defective?<br>
+        <li>What is the probability that a random computer sold by A is defective?<br>
         <li>Draw a tree diagram to illustrate this example.<br>
       </ul>
   </div>
@@ -160,8 +160,8 @@ $(function () {
       the case without replacement?
 
       <ul>
-        <li>Draw a tree diagram that illustrates the case with replacement and write down the probabilty of the second ball being white.<br>
-        <li>Draw a tree diagram that illustrates the case without replacing the first ball and write down the probabilty of the second ball being white.<br>
+        <li>Draw a tree diagram that illustrates the case with replacement and write down the probability of the second ball being white.<br>
+        <li>Draw a tree diagram that illustrates the case without replacing the first ball and write down the probability of the second ball being white.<br>
         <li>Which case represents the balls being drawn as independent events? Why?<br>
         <li><b>Definition</b> If \(A\) and \(B\) are events in sample space \(S\) we say they are independent if and only if \(P(A\cap B) = P(A)P(B)\).
           Otherwise they are dependent.<br>
@@ -201,8 +201,8 @@ $(function () {
 <h2>Example - Battery </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example </button>
   <div id="ex7" class="collapse">
-  <P> The probabilty a battery will last 10 hours is 0.8. The probabilty that it will last 15 hours is 0.15.
-    Given that a battery has lasted 10 hours what is the probabilty it will last 15 hours?
+  <P> The probabilty a battery will last 10 hours is 0.8. The probability that it will last 15 hours is 0.15.
+    Given that a battery has lasted 10 hours what is the probability it will last 15 hours?
   </div>
 
 
@@ -237,7 +237,7 @@ $(function () {
   <div id="ex9" class="collapse">
   <P> Consider owning a landscaping company and bidding on 3 projects. You estimate the chances of winning the bid
     on projects A, B, and C to be 0.7, 0.6, and 0.5, respectively. You also know the chances of winning each are independent.
-    Draw a tree diagram to help you determine the probabilty that you win:
+    Draw a tree diagram to help you determine the probability that you win:
     <ol>
       <li>all three bids?<br>
       <li>exactly two bids?<br>
@@ -265,7 +265,7 @@ $(function () {
 <h2>Example - dice (again)  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example </button>
   <div id="ex11" class="collapse">
-  <P> A single six-sided die is rolled 6 times. What is the probabilty of the sequence of rolls being 1,2,3,4,5,6 ?
+  <P> A single six-sided die is rolled 6 times. What is the probability of the sequence of rolls being 1,2,3,4,5,6 ?
   </div>
 <br>
 
