--- a/math154/MV_FTOC.html
+++ b/math154/MV_FTOC.html
@@ -55,7 +55,7 @@ def _(funx=input_box(funx,label="f =  "),funy=input_box(funy,label="g =  "),
     <ol type='A'>
       <li> Sketch (or use software to visualize) the vector field \(\displaystyle \vec{F} = \begin{bmatrix} x^2 \\ y \end{bmatrix} \).
       <li> Add the curve \(C\) represented by \(\displaystyle \vec{r}(t) = \begin{bmatrix} 3 \cos t \\ 3 \sin t \end{bmatrix}\) to your sketch. Describe this curve.
-      <li> Let \(\hat{n}\) be the unit normal to the curve and \(s\) represent arc length. What is represented by \(\displaystyle \int_C \vec{F} \cdot \hat{n}~ds \)?
+      <li> Let \(\hat{n}\) be the unit normal to the curve and \(s\) represent arc length. What is represented by \(\displaystyle \oint_C \vec{F} \cdot \hat{n}~ds \)?
       <li> Calculate the integral above.
 
 
