--- a/math154/M158FinalExamreview_Fall2019.html
+++ b/math154/M158FinalExamreview_Fall2019.html
@@ -57,7 +57,7 @@ def _(funx=input_box(funx,label="f =  "),funy=input_box(funy,label="g =  "),
       <li>Find and classify the critical points, if any, of \(f(x,y) = \frac{1}{3}x^3 + y^2 + 2xy - 6x -3y +4\).<br><br>
       <li>Write the integral \(\displaystyle \int_1^2 \int_0^x (x^2 + y^2)~dy~dx\) in polar coordinates.<br><br>
       <li>Set up integrals in rectangular and cylindrical coordinates that represent the volume of the region below the plane \(z=1\) and inside the paraboloid \(z = 4x^2 + 4y^2\).<br><br>
-      <li>True or False. \(\displaystyle \vec{r} = <\sin t, \cos t, e^t >\) is a flowline of the vector field \(\displaystyle \vec{F} = < y -x, z > \).<br><br>
+      <li>True or False. \(\displaystyle \vec{r} = <\sin t, \cos t, e^t >\) is a flowline of the vector field \(\displaystyle \vec{F} = < y, -x, z > \).<br><br>
       <li>Find the equation of the plane through the points P(1,1,1), Q(2,4,3), and R(-1,-2,-1).<br><br>
       <li>Find the equation of the tangent plane to \(z = \ln (2x + y)\) at (-1,3).<br><br>
       <li><img src="line_int_param_vq1.png" width=520><br><br>
