--- a/math154/calculus1_functions.html
+++ b/math154/calculus1_functions.html
@@ -108,7 +108,7 @@ def _(alpha=(alpha,(0.,3.)),beta=(beta,(0.,3.))):
   <h2>Example 5 - distance formula </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example 5</button>
     <div id="ex5" class="collapse">
-      <P>Let \(f(x) = x^2\). We will make a new function, \(D(x)\), defined by the distance from (0,0) to \(x,f(x)\).
+      <P>Let \(f(x) = x^2\). We will make a new function, \(D(x)\), defined by the distance from (0,0) to \((x,f(x))\).
       <ol type = 'A'>
         <li>What is the distance formula between two points (a,b) and (x,y)?<br><br>
         <li>What is \(D(0)\) here? \(D(3)\)? \(D(-3)\)?
@@ -149,21 +149,90 @@ def _(alpha=(alpha,(0.,3.)),beta=(beta,(0.,3.))):
 <h2>Example 8  </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
  <div id="ex8" class="collapse">
- <P>
+   <P> Let \(f(x) = -x^2 - 6x\).
+     <ol>
+       <li>Does the graph of \(f\) open up or down?
+       <li>What is the vertex of this graph?
+       <li>What is the equation for the axis of symmetry of the graph?
+       <li>What are the \(x\) and \(y\) intercepts of the graph?
+       <li>What is the domain and range of \(f\)?
+       <li>Sketch the graph of \(f\).
+       </ol>
 </div>
 
 <h2>Example 9  </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example 9</button>
  <div id="ex9" class="collapse">
- <P>
+   <P> Let \(g(x) = 3x^2 - 24x - 5\).
+     <li>Does \(g\) have a maximum or minimum?
+     <li>Write \(g(x)\) in standard form for a parabola, i.e. \(g(x) = a(x-h)^2 + k\).
+     <li>What is the vertex of the graph of \(g\)?
+     </ol>
 </div>
 
 <h2>Example 10  </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example 10</button>
  <div id="ex10" class="collapse">
- <P>
+ <P> Let \( f(x) = 2x - 1, g(x) = x^3 - 5, h(x) = 5 - x^2\).
+   Find the values composite functions below.
+   <ol>
+     <li>\(f(g(3))\)
+     <li>\(g(f(3))\)
+     <li>\(h(g(-1))\)
+     </ol>
 </div>
 
--->
+<h2>Example 11  </h2>
+ <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example 11</button>
+ <div id="ex11" class="collapse">
+ <ol type='A'>
+ <li> Let \( f(x) = 4x + 1, g(x) = x^2 - x + 5\).
+   Find the composite functions below and simplify the expression.
+   <ol>
+     <li>\(f(g(x))\)
+     <li>\(g(f(x))\)
+     </ol>
+  <li>Let \(f(x) = 2x4 + x4 + 1, g(x) = \sqrt{x}\). Find \(f(g(x)) = (f \circ g) (x)\).
+  </ol>
+
+
+</div>
+
+<h2>Example 12 - Sketching Polynomials </h2>
+ <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex12">Example 12</button>
+ <div id="ex12" class="collapse">
+ <ol type='A'>
+ <li> Let \( f(x) = 4x^4 + x^2 + x - 1\). What happens as \(x\) goes to \(\infty\) and \(-\infty\)? Why?
+ <li> Let \( g(x) = -23x^3 - 64x^2 +1\). What happens as \(x\) goes to \(\infty\) and \(-\infty\)? Why?
+ <li> Let \(h(x) = x(x+3)(x-1)\).
+   <ol type='a'>
+     <li>What is the degree of \(h\)?
+     <li>What are the roots of \(h\)?
+     <li>What is the sign of \(h\) in the intervals between each of the roots?
+     <li>What happens as \(x\) goes to \(\infty\) and \(-\infty\)?
+     <li>Sketch the graph of \(h\).
+     </ol>
+  <li>Sketch the graph of \(k(x) = x^2 - 2x - 63\). (hint: factor)
+  <li>Sketch the graph of \(j(x) = x^3 + 5x^2 + 6x\).
+  </ol>
+
+  <h2>Example 13 - Sketching transformed functions </h2>
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example 13</button>
+   <div id="ex13" class="collapse">
+   <ol type='A'>
+   <li> Sketch \(f(x) = \frac{1}{x}\), \(g(x) = \frac{1}{x+1}\), and \(h(x) = \frac{1}{x} + 3\) on the same set of axes.
+   <li> Sketch \(f(x) = \cos(x) \), \(g(x) = 3\cos(x - 1)\), and \(h(x) = -2 \cos(x - 1) + 2\) on the same set of axes.
+   <li> Sketch \(f(x) = \sin(x)\) and \(g(x) = 4\sin(2 \pi x)\) on the same set of axes.
+    </ol>
+</div>
+
+<h2>Example 14 - Warmup or Review </h2>
+ <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex14">Example 14</button>
+ <div id="ex14" class="collapse">
+ <ol type='A'>
+ <li> Solve \( \frac{x-2}{2} = \frac{4}{x}\).
+ <li> Find any/all solutions to \(\frac{5}{6}x = -\frac{6}{5}x^2\). If there are no solutions, explain why.
+  </ol>
+</div>
 </body>
 </html>
