--- a/math154/calculus1_functions.html
+++ b/math154/calculus1_functions.html
@@ -215,6 +215,7 @@ def _(alpha=(alpha,(0.,3.)),beta=(beta,(0.,3.))):
   <li>Sketch the graph of \(k(x) = x^2 - 2x - 63\). (hint: factor)
   <li>Sketch the graph of \(j(x) = x^3 + 5x^2 + 6x\).
   </ol>
+</div>
 
   <h2>Example 13 - Sketching transformed functions </h2>
    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example 13</button>
