--- a/math154/calculus1_functions.html
+++ b/math154/calculus1_functions.html
@@ -192,7 +192,7 @@ def _(alpha=(alpha,(0.,3.)),beta=(beta,(0.,3.))):
      <li>\(f(g(x))\)
      <li>\(g(f(x))\)
      </ol>
-  <li>Let \(f(x) = 2x4 + x4 + 1, g(x) = \sqrt{x}\). Find \(f(g(x)) = (f \circ g) (x)\).
+  <li>Let \(f(x) = 2x^4 + x^4 + 1, g(x) = \sqrt{x}\). Find \(f(g(x)) = (f \circ g) (x)\).
   </ol>
 
 
