--- a/math154/calculus1_inverses.html
+++ b/math154/calculus1_inverses.html
@@ -70,7 +70,7 @@ $(function () {
     <li> \( \tan^{-1}(1)   \)
     <li> \( \cos^{-1} (2)   \)
   </ul><br><br>
-  
+
 <P>Question: Sketch a plot of the cosine function. Does this function have an inverse? Why or why not?
   <div class="compute">
     <script type="text/x-sage">
@@ -121,7 +121,7 @@ show(p3+pti)
 <h2>Explore</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exexp">Example</button>
 <div id="exexp" class="collapse">
-  <P>How many functions can you find that are there own inverse? What do you notice about these functions?
+  <P>How many functions can you find that are their own inverse? What do you notice about these functions?
 </div>
 
 
