--- a/math154/calculus1_limits.html
+++ b/math154/calculus1_limits.html
@@ -125,6 +125,25 @@ the limit as \(x\) goes to 100 of \(f(x)\) is 0. Be prepared to justify your ans
       </ol>
   </div>
 
+<h2>Limit Laws</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#laws">Theorem</button>
+  <div id="laws" class="collapse">
+    <img src="./limitlaws.png" width=500>
+    <br><br><br>
+    <img src="./twographs_limits.png" width=600><br>
+    Find the limits below if they exist.
+    <ol>
+      <li>\(\displaystyle \lim_{x \to 0} f(x) + g(x)\)
+      <li>\(\displaystyle \lim_{x \to 1} f(x)g(x)\)
+      <li>\(\displaystyle \lim_{x \to 0} f(x) + g(x)\)
+      <li>\(\displaystyle \lim_{x \to -2^-} \frac{g(x)}{f(x)}\)
+      <li>\(\displaystyle \lim_{x \to -6} f\left( \frac{g(x)}{2} \right)\)
+      <li>\(\displaystyle \lim_{x \to -4}  g(f(x))\)
+    </ol>
+  </div>
+
+
+
 <h2>Example - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
   <div id="ex5" class="collapse">
@@ -139,6 +158,18 @@ the limit as \(x\) goes to 100 of \(f(x)\) is 0. Be prepared to justify your ans
         <li>\(\displaystyle \lim_{x \to 1/2} \frac{2x^2 + 3x - 2}{2x-1}\)<br><br>
       </ol>
   </div>
+
+  <h2>Example - Some trig limits </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example</button>
+    <div id="ex8" class="collapse">
+      <ol type='A'>
+        <li>Draw the first quarter of unit circle \( 0 \leq \theta \leq \pi/2 \). Draw triangles that show \(\sin \theta, \cos \theta, \tan \theta\).
+        <li>Show \( \sin \theta < \theta < \tan \theta \) for these values using your picture.
+        <li>Show \( 1 > \frac{\sin \theta}{\theta} > \cos \theta\).
+        <li>Show \(\displaystyle \lim_{\theta \to 0} \frac{\sin \theta}{\theta} = 1\).
+        <li>Evaluate \(\displaystyle \lim_{\theta \to 0}\frac{1 - \cos \theta}{\sin \theta}\).
+      </ol>
+    </div>
 
 
 
