--- a/math154/calculus1_limits.html
+++ b/math154/calculus1_limits.html
@@ -135,6 +135,7 @@ the limit as \(x\) goes to 100 of \(f(x)\) is 0. Be prepared to justify your ans
     <ol>
       <li>\(\displaystyle \lim_{x \to 0} f(x) + g(x)\)
       <li>\(\displaystyle \lim_{x \to 1} f(x)g(x)\)
+      <li>\(\displaystyle \lim_{x \to 2} f(x)g(x)\)
       <li>\(\displaystyle \lim_{x \to 0} f(x) + g(x)\)
       <li>\(\displaystyle \lim_{x \to -2^-} \frac{g(x)}{f(x)}\)
       <li>\(\displaystyle \lim_{x \to -6} f\left( \frac{g(x)}{2} \right)\)
