--- a/math154/calculus1_epsilondelta_limits.html
+++ b/math154/calculus1_epsilondelta_limits.html
@@ -130,18 +130,15 @@ real solution.
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
   <div id="ex5" class="collapse">
     <img src="./twographs_limits2.png" width=400><br>
-    <P>Theorem. If \(f(x)\) is continuous at \(L\) and \(\displaystyle \lim_{x \to a} g(x) = L\), then \(\displaystyle \lim_{x \to a}f(g(x)) = f\left( \lim_{x \to a} g(x) \right) = F(L)\).
+    <P>Theorem. If \(f(x)\) is continuous at \(L\) and \(\displaystyle \lim_{x \to a} g(x) = L\), then \(\displaystyle \lim_{x \to a}f(g(x)) = f\left( lim_{x \to a} g(x) \right) = F(L)\).
     <P>True of False. \(\displaystyle \lim_{x \to 2} f(g(x))\) exists.<br><br>
-    <P>How does this theorem fit in with \(\displaystyle \lim_{x \to 0} \sin \left( \frac{1}{x} \right)\) DNE?<br><br>
-    <P>What is \(\displaystyle \lim_{x \to 0} e^{\frac{\sin(3x)}{3x}}\)?
   </div>
 
   <h2>Example - logic </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example</button>
     <div id="ex8" class="collapse">
-      You know the following statement is true:<br><br>
-"If f(x) is a polynomial, then f(x) is continuous."<br><br>
-
+      You know the following statement is true:
+"If f(x) is a polynomial, then f(x) is continuous.""
 Which of the following is also true?
       <ol type='A'>
         <li>If f(x) is not continuous, then it is not a polynomial.
