--- a/math154/calculus1_continuity.html
+++ b/math154/calculus1_continuity.html
@@ -91,7 +91,7 @@ removable, or infinite.
     <P>Find the values of \(k\) that makes each of the following functions continuous.
     <ol type='A'>
       <li>\(\displaystyle f(x) = \begin{cases} \frac{x^2 + 3x + 2}{x+2}, & x \neq 2 \\ k, & x=2\end{cases} \)<br><br>
-      <li>\(\displaystyle f(x) = \begin{cases} 3x+2, & x< k \\ 2x-3, & k \geq x\end{cases} \)
+      <li>\(\displaystyle f(x) = \begin{cases} 3x+2, & x< k \\ 2x-3, & x \geq k\end{cases} \)
     </ol>
   </div>
 
