--- a/math154/calculus1_epsilondelta_limits.html
+++ b/math154/calculus1_epsilondelta_limits.html
@@ -26,61 +26,37 @@ $(function () {
 
 <hr>
 
-<h2>Warmup</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wu">Warmup</button>
-  <div id="wu" class="collapse">
-    <ol>
-      <li>State the definition of continuity at a point using limits,
-        i.e. complete the definition "A function f(x) is continuous at point a if and only if ..."
-      <li>What does your definition mean graphically?
-      <li>A drippy faucet adds one milliliter to the volume of water in a tub at precisely one second intervals.
-        Let f be the function that represents the volume of water in the tub at time t. Which of the following statements is correct?
-        <ul>
-          <li>(a) f is a continuous function at every time t
-            <li>(b) f is continuous for all t other than the precise instants when the water drips into
- the tub.
-          <li>(c) f is not continuous at any time t.
-          <li>(d) There is not enough information to know where f is continuous.
-          </ul>
-     <li> A drippy faucet adds one milliliter to the volume of water in a tub at precisely one
- second intervals. Let g be the function that represents the volume of water in the
- tub as a function of the depth of the water, x, in the tub. Which of the following
- statements is correct?
- <ul>
- <li>(a) g is a continuous function at every depth x.
- <li>(b) there are some values of x at which g is not continuous.
- <li>(c) g is not continuous at any depth, x.
- <li>(d) not enough information is given to know where g is continuous
- </ul>
-      </ol>
-  </div>
+
 
 <h2>Example</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Example</button>
   <div id="ex0" class="collapse">
-    Consider the graph of the function below.<br>
-    <img src="./limits_continuity1.png" width=400><br>
-    <ol type='a'>
-      <li>Find all values for which the function is
-discontinuous.
-      <li>For each value in part a., state why the formal
-definition of continuity does not apply.
-      <li>Classify each discontinuity as either jump,
-removable, or infinite.
-      </ol>
+    <p>Show that \(\displaystyle \lim_{x \to 2} 2-x = 0 \) using the \(\epsilon - \delta\) definition of limit.
   </div>
 
-
+  <h2>Example</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex00">Example</button>
+    <div id="ex00" class="collapse">
+      <img src="./eps_delta1.png" width=400><br>
+      <p>The following graph of the function \(f\) satisfies  \(\displaystyle \lim_{x \to 2} f(x) = 2\). In the following exercises, determine a
+        value of \(\delta >0\) that satisfies each statement.
+        <ol>
+          <li>If \(0 < |x-2| < \delta\), then \(|f(x)-2| < 1\).<br><br>
+          <li>\(0 < |x-2| < \delta \Rightarrow |f(x)-2| < 0.5 \).
+        </ol>
+    </div>
 
 
 <h2>Example </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example</button>
   <div id="ex1" class="collapse">
-<P> Find the places, if any, where the following functions are discontinuous. Graph each function.
+<P> Consider the function \(f(x) = x^2\). We know the limit \(\displaystyle \lim_{x \to 2} f(x) = 4\).
+  Consider the \(\epsilon - \delta\) definition of limit and answer the following questions.
   <ol type='A'>
-    <li>\(\displaystyle f(x) = \frac{x}{x^2 - x}\)<br><br>
-    <li>\(\displaystyle g(x) = \frac{|x-2|}{x-2}\)<br><br>
-    <li>\(\displaystyle h(x) = x^{-1} + 1\)
+    <li>If we let \(\displaystyle \epsilon = 1\), what is the largest \(\delta\) could be?<br><br>
+    <li>If we let \(\displaystyle \epsilon = 0.1\), what is the largest \(\delta\) could be?<br><br>
+    <li>If we let \(\displaystyle \epsilon = 0.01\), what is the largest \(\delta\) could be?<br><br>
+    <li>If we let \(\displaystyle \epsilon > 0\) be arbitary, what is the largest \(\delta\) could be?<br><br>
   </ol>
 
   </div>
@@ -88,64 +64,22 @@ removable, or infinite.
 <h2>Example </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example</button>
   <div id="ex2" class="collapse">
-    <P>Find the values of \(k\) that makes each of the following functions continuous.
-    <ol type='A'>
-      <li>\(\displaystyle f(x) = \begin{cases} \frac{x^2 + 3x + 2}{x+2}, & x \neq 2 \\ k, & x=2\end{cases} \)<br><br>
-      <li>\(\displaystyle f(x) = \begin{cases} 3x+2, & x< k \\ 2x-3, & k \geq x\end{cases} \)
-    </ol>
+    <P>Write the \(\epsilon - \delta\) definition of limit and its negation. <br><br>
+    <P>Use this negation to show why \(\displaystyle \lim_{x \to 2}f(x) = \lim_{x\to 2} \frac{|x-2|}{x-2}\) does not exist.
   </div>
 
-  <h2>True/False</h2>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#cv">Voting</button>
-    <div id="cv" class="collapse">
-  <ol type='A'>
-  <li>True or False: At some time since you were born your weight in pounds equaled your
-  height in inches.
-  <br><br>
-  <li>True or False. At some time since you were born, you were exactly three feet tall.<br><br>
-  <li>Suppose that during half-time at a basketball game the score of the home team was
-36 points. True or False: There had to be at least one moment in the first half when
-the home team had exactly 25 points.
-  </ol>
-  </div>
 
-<h2>Theorem </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#thm">Theorem</button>
-  <div id="thm" class="collapse">
-    <P>Theorem: The Intermediate Value Theorem. Let \(f\) be continuous over a closed, bounded interval \([a,b]\).
-       If \(z\) is any real number between \(f (a)\) and \(f (b)\), then there
-       is a number \( c \in [a,b]\) satisfying \(f (c) = z\).
-       <br><br><br>
-    <P>Use the statement “The cosine of t is equal to t
-cubed.”
-<ol type='a'>
-<li> Write a mathematical equation of the statement.
-<li> Prove that the equation in part a. has at least one
-real solution.
-</ol>
-
-  </div>
 
 <h2>Example - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
   <div id="ex5" class="collapse">
-    <img src="./twographs_limits2.png" width=400><br>
-    <P>Theorem. If \(f(x)\) is continuous at \(L\) and \(\displaystyle \lim_{x \to a} g(x) = L\), then \(\displaystyle \lim_{x \to a}f(g(x)) = f\left( lim_{x \to a} g(x) \right) = F(L)\).
-    <P>True of False. \(\displaystyle \lim_{x \to 2} f(g(x))\) exists.<br><br>
+    <P>An engineer is using a machine to cut a flat square
+of Aerogel of area 144 cm\(^2\). If there is a maximum error
+tolerance in the area of 8 cm\(^2\), how accurately must the
+engineer cut on the side, assuming all sides have the same
+length? How do these numbers relate to \(\delta, \epsilon, a , L\)?
   </div>
 
-  <h2>Example - logic </h2>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example</button>
-    <div id="ex8" class="collapse">
-      You know the following statement is true:
-"If f(x) is a polynomial, then f(x) is continuous.""
-Which of the following is also true?
-      <ol type='A'>
-        <li>If f(x) is not continuous, then it is not a polynomial.
-        <li>If f(x) is continuous, then it is a polynomial.
-        <li>If f(x) is not a polynomial, then it is not continuous.
-      </ol>
-    </div>
 
 
 </body>
