--- a/math154/calculus1_continuity.html
+++ b/math154/calculus1_continuity.html
@@ -130,8 +130,8 @@ real solution.
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
   <div id="ex5" class="collapse">
     <img src="./twographs_limits2.png" width=400><br>
-    <P>Theorem. If \(f(x)\) is continuous at \(L\) and \(\displaystyle \lim_{x \to a} g(x) = L\), then \(\displaystyle \lim_{x \to a}f(g(x)) = f\left( \lim_{x \to a} g(x) \right) = F(L)\).
-    <P>True of False. \(\displaystyle \lim_{x \to 2} f(g(x))\) exists.<br><br>
+    <P>Theorem. If \(f(x)\) is continuous at \(L\) and \(\displaystyle \lim_{x \to a} g(x) = L\), then \(\displaystyle \lim_{x \to a}f(g(x)) = f\left( \lim_{x \to a} g(x) \right) = f(L)\).
+    <P>True or False. \(\displaystyle \lim_{x \to 2} f(g(x))\) exists.<br><br>
     <P>How does this theorem fit in with \(\displaystyle \lim_{x \to 0} \sin \left( \frac{1}{x} \right)\) DNE?<br><br>
     <P>What is \(\displaystyle \lim_{x \to 0} e^{\frac{\sin(3x)}{3x}}\)?
   </div>
