--- a/math154/calculus1_precalc_limits_exam_review.html
+++ b/math154/calculus1_precalc_limits_exam_review.html
@@ -22,7 +22,7 @@ $(function () {
 </head>
   <body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
 
-  <h1>Calc I Precalculus Exam Review</h1>
+  <h1>Calc I Precalculus and Limits Exam Review</h1>
 
 <hr>
 
