--- a/math154/calculus1_epsilondelta_limits.html
+++ b/math154/calculus1_epsilondelta_limits.html
@@ -22,7 +22,7 @@ $(function () {
 </head>
   <body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
 
-  <h1>Calc I Continuity</h1>
+  <h1>Calc I \(\epsilon - \delta\) definition of limit</h1>
 
 <hr>
 
