--- a/math154/calculus1_limit_def_derivative.html
+++ b/math154/calculus1_limit_def_derivative.html
@@ -148,10 +148,15 @@ def _(f=input_box(f,label="f(x) =  "),x0=input_box(x0,label="x0 = "),pm=(1.,(0.0
     <P>Let \(\displaystyle f(x) = |x|\). Find \(f'(1), f'(-1), f'(0)\).
   </div>
 
-  <h2>Example - </h2>
+  <h2>More Examples - </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example</button>
     <div id="ex6" class="collapse">
-      <P>Let \(\displaystyle f(x) = (1 + x)^2\). Find \(f'(x)\) using the definition of derivative.
+      <ol>
+        <li>Let \(\displaystyle f(x) = (1 + x)^2\). Find \(f'(x)\) using the definition of derivative.<br><br>
+        <li>Use the definition of derivative to find \(f'(x)\) if \(f(x) = 2x^2 + 10x\).<br><br>
+          <li>\(\displaystyle \lim_{h \to 0} \frac{5^{2+h}-25}{h}\) represents \(f'(a)\) for some function \(f(x)\) at some point \(a\).
+            Find \(f\) and \(a\).
+          </ol>
     </div>
 
 
