--- a/math154/calculus1_limits_exam_review.html
+++ b/math154/calculus1_limits_exam_review.html
@@ -65,6 +65,8 @@ Which of the following is also true?
       <li>If \(|x-3|< \delta/2\) then \(|f(x) -2| < \epsilon\).<br>
     </ol>
     <li>Use the definition of derivative to find \(f'(x)\) if \(f(x) = 2x^2 + 10x\).
+    <li>\(\displaystyle \lim_{h \to 0} \frac{5^{2+h}-25}{h}\) represents \(f'(a)\) for some function \(f(x)\) at some point \(a\).
+      Find \(f\) and \(a\).
 </ol>
 
 </body>
