--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -138,11 +138,13 @@ $(function () {
   <div id="ex5" class="collapse">
     <P>Find the derivatives of the following functions.
       <ol>
-        <li>\(f(x) = 10^{3\pi}\)<br><br>
-        <li>\(g(x) = (x+ 1)^3)\)<br><br>
-        <li>\(h(x) = (x^2 + 1)(x + 4)\)<br><br>
-        <li>\(j(x) = (x^3 + x^2)^2\)<br><br>
-        <li>\(k(x) = x^{\sqrt{2}}\)<br><br>
+        <li>\(\displaystyle f(x) = 10^{3\pi}\)<br><br>
+        <li>\(\displaystyle g(x) = (x+ 1)^3\)<br><br>
+        <li>\(\displaystyle h(x) = (x^2 + 1)(x + 4)\)<br><br>
+        <li>\(\displaystyle j(x) = (x^3 + x^2)^2\)<br><br>
+        <li>\(\displaystyle k(x) = x^{\sqrt{2}}\)<br><br>
+        <li>\(\displaystyle m(x) = \frac{1}{x^2}\)<br><br>
+        <li>\(\displaystyle n(x) = \frac{x^2 - x}{x^4}\)<br><br>
       </ol>
   </div>
 
