--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -148,6 +148,78 @@ $(function () {
       </ol>
   </div>
 
+<h2>Example - going backwards </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example</button>
+<div id="ex6" class="collapse">
+  <P>Power Rule for Derivatives: If \(f(x) = x^n\), then \(f'(x) = nx^{n-1}\).<br><br>
+  <P>Whenever we find a rule for derivatives, we also find a rule for antiderivatives.<br><br>
+  <P>Power Rule for Derivatives: If \(f(x) = x^n\) and \(n \neq -1\), then the function \(F(x)\) such that
+    \(F'(x) = f(x)\) is \(F(x) = \frac{1}{n+1}x^{n+1} + C\) for any constant \(C\).<br><br>
+
+    <P>Find \(F(x)\) such that \(F'(x) = f(x)\) for the functions below.
+    <ol>
+      <li>\(\displaystyle f_1(x) = 2x\)<br><br>
+      <li>\(\displaystyle f_2(x) = x^2\)<br><br>
+      <li>\(\displaystyle f_3(x) = x + 2x^2 + 8x^4 + 4\)<br><br>
+    </ol>
+    <br>
+    <P>Question: Let \(f'(x) = x^2\) and \(g'(x) = x^2\). Does \(f'(x) = g'(x)\)?
+</div>
+
+<h2>Example - a few more rules </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example</button>
+  <div id="ex7" class="collapse">
+    <P>Draw the graph of any function and draw the graph of its derivztive beneath it.<br>
+    <P>Now draw your function shifted up 4 units. Draw the graph of the derivative of this new function. What do you notice? <br>
+
+    <P>Let \(f\) be a differentiable function and \(a\) be any constant. Then we have the following:
+      <ol>
+        <li>\(\displaystyle f(x) + a = f'(x)\)<br><br>
+        <li>\(\displaystyle f(x+a) = ???\)<br><br>
+        <li>\(\displaystyle (af(x))' = af'(x)\)<br><br>
+        <li>\(\displaystyle f'(ax)) = af'(ax)\)<br><br>
+      </ol>
+  </div>
+
+  <h2>Example - product rule </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example</button>
+    <div id="ex8" class="collapse">
+      <P>Let \(f(x) = x\) and \(g(x) = 2x\). Does \((fg)' = f'g'\)?<br><br>
+
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#pdr">Theorem</button>
+          <div id="pdr" class="collapse">
+            <P>Product Rule for derivatives: Let \(u(x)\) and \(v(x)\) be differentiable functions.
+              Then let \(p(x) = u(x)v(x) = (uv)(x). Then \(p\) is differentiable and
+              \(\frac{dp}{dx} = p'(x) = u'(x)v(x) + u(x)v'(x)\).
+          </div>
+          <br><br>
+
+        <P>Find derivatives of the functions below.
+        <ol>
+          <li>\(\displaystyle f(x) = x(2x)\) <br><br>
+          <li>\(\displaystyle g(x) = \sqrt{x}(x+5)\) <br><br>
+          <li>\(\displaystyle j(x) = (x^4 + 5)(x^2 - 3)\) <br><br>
+          <li>\(\displaystyle k(x) = (5x^2 - \pi)(3x^{-2} + 2\sqrt{x})\) <br><br>
+        </ol>
+
+    </div>
+
+<h2>Example - quotient rule </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example</button>
+  <div id="ex9" class="collapse">
+    <P>Quotient rule for derivatives: Let \(\displaystyle q(x) = \frac{u(x)}{v(x)}\) where \(u\) and \(v\) are differentiable.
+      Then \(\displaystyle q' = \frac{u' v - uv'}{v^2}\).
+    <br><br>
+    <P>Prove this is true by letting \(q = u v^{-1}\) and using the product rule.<br><br>
+
+      <P>Find derivatives of the functions below.
+      <ol>
+        <li>\(\displaystyle f(x) = \frac{3x}{\sqrt{x}}\)<br><br>
+        <li>\(\displaystyle g(x) = \frac{2x-1}{5x+2}\)
+      </ol>
+  </div>
+
+
   <h2>Voting - </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#cv">Example</button>
     <div id="cv" class="collapse">
