--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -210,7 +210,7 @@ $(function () {
     <P>Quotient rule for derivatives: Let \(\displaystyle q(x) = \frac{u(x)}{v(x)}\) where \(u\) and \(v\) are differentiable.
       Then \(\displaystyle q' = \frac{u' v - uv'}{v^2}\).
     <br><br>
-    <P>Prove this is true by letting \(q = u v^{-1}\) and using the product rule.<br><br>
+    <P>Prove this is true by letting \(u = qv\) and using the product rule.<br><br>
 
       <P>Find derivatives of the functions below.
       <ol>
