--- a/math154/calculus1_trig_derivatives.html
+++ b/math154/calculus1_trig_derivatives.html
@@ -158,7 +158,7 @@ s, \(s = 0\) and \(t = 0\).
                       <li>does not exist because 0/0 is not defined
                       </ol><br><br>
 
-                      <li>We know that \(\displaystyle{\frac{d}{dx}(\sin x)=\cos x}$\).
+                      <li>We know that \(\displaystyle{\frac{d}{dx}(\sin x)=\cos x}\).
 <b>True or False</b>:  \(\displaystyle{\frac{d}{dx}\sin (2x)=\cos (2x)}\).
 
       </ol>
