--- a/math154/calculus1_implicit_differentiation.html
+++ b/math154/calculus1_implicit_differentiation.html
@@ -22,7 +22,7 @@ $(function () {
 </head>
   <body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
 
-  <h1>Calc I Derivatives of logs and exponential functions</h1>
+  <h1>Calc I Implicit differentiation</h1>
 
 <hr>
 
